Issue #7 - add parent_dir config

--- a/config.json.example
+++ b/config.json.example
@@ -9,6 +9,7 @@
   },
   "projects": {
     "default": "<project id>",
+    "project_dir": <optional parent directory for all projects>
     "<project id>": {
       "directory": "<path/to/repo>",
       "folders": ["resources","source"],
